[project]
name = "rlm-env"
version = "0.1.0"
description = "RLM (Recursive Language Model) execution environment for Kelpie codebase"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.18.0",
    "RestrictedPython>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.scripts]
rlm-env = "rlm_env.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
